--- a/language/lang_de.yml
+++ b/language/lang_de.yml
@@ -13,6 +13,11 @@ game:
   inventoryTitles:
     gameTitle: "&92048             &6Punkte: %score%"
     lost: "&92048    &4Game Over  &6Punkte: %score%"
+  buttons:
+    up: '&3Hoch'
+    down: '&3Runter'
+    right: '&3Rechts'
+    left: '&3Links'
 
 
 prefix: "[&32048&r]"
