--- a/language/lang_en.yml
+++ b/language/lang_en.yml
@@ -13,6 +13,12 @@ game:
   inventoryTitles:
     gameTitle: "&92048             Score: %score%"
     lost: "&92048    &4Game Over  &9Score: %score%"
+  buttons:
+    up: '&3Up'
+    down: '&3Down'
+    right: '&3Right'
+    left: '&3Left'
+
 
 
 prefix: "[&32048&r]"
