--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,18 @@
 
+
+--------------------------------------------------
+
+v 1.2.0
+- centralised more code to GameBox
+--- use static main-key from GUIManager (GameBox) for guis
+--- chat color in Main class
+--- Sounds
+--- use ItemStackUtil from GameBox to load ItemStacks
+- create lang folder when not finding lang_en.yml
 - removed deprecated methods and variables (now depends on GB version 1.3.0)
 - replace all non numbers in GB version
 
---------------------------------------------------
+
 v1.1.1
 - checking for bad nav matData and handling it
 - give link to gamebox when outdated
