--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,4 @@
 
-
 --------------------------------------------------
 
 v 1.2.0
@@ -11,6 +10,7 @@ v 1.2.0
 - create lang folder when not finding lang_en.yml
 - removed deprecated methods and variables (now depends on GB version 1.3.0)
 - replace all non numbers in GB version
+- correct lang_en
 
 
 v1.1.1
