--- a/language/lang_en.yml
+++ b/language/lang_en.yml
@@ -6,7 +6,7 @@ game:
   econ:
     # use %cost% for the amount payed
     payed: " &2You paid &4%cost%"
-    notEnoughMoney: " &4You do not have not enough money!"
+    notEnoughMoney: " &4You do not have enough money!"
     # use %reward% for the amount the player won
     wonMoney: " &2You reached a score of &6%score%&2 and won &6%reward%&2!"
   gameOverNoPay: " &2You reached a score of &6%score%"
