--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,9 @@
 
 
 --------------------------------------------------
+v 1.3.1
+- check inventory title length if GB flag is set
+
 v 1.3.0
 - push GB dep to 1.5.0
 --- now compatible with /gba reload
