--- a/src/main/resources/language/twoofoureight/lang_de.yml
+++ b/src/main/resources/language/twoofoureight/lang_de.yml
@@ -14,10 +14,10 @@ game:
     gameTitle: "&92048             &6Punkte: %score%"
     lost: "&92048   &4Game Over  &6Punkte: %score%"
   buttons:
-    up: '&3Hoch'
-    down: '&3Runter'
-    right: '&3Rechts'
-    left: '&3Links'
+    up: '&3Hoch ↑'
+    down: '&3Runter ↓'
+    right: '&3Rechts →'
+    left: '&3Links ←'
 
 prefix: "[&32048&r]"
 name: "&12048&r"
